deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: irfan-homecare
  labels:
    name: irfan-homecare
